--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 .App {
+  display: flex;
   text-align: center;
   min-height: 100vh;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+  /*flex-wrap: wrap;*/
 }
 
 .App-logo {
@@ -36,4 +42,33 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.user-list{
+  display: flex;
+}
+
+.user-item {
+  border-style: solid;
+  margin: 1rem;
+  align-self: center;
+}
+
+input {
+  margin: 10px;
+}
+
+.user-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-form div {
+  display: flex;
+  align-items: center;
+}
+
+.user-form div label{
+  width: 50px;
 }
