--- a/src/App.css
+++ b/src/App.css
@@ -68,20 +68,6 @@ input {
   margin: 10px;
 }
 
-.user-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.user-form div {
-  display: flex;
-  align-items: center;
-}
-
-.user-form div label{
-  width: 50px;
-}
 
 /*Switch Between Users & Posts*/
 .container {
@@ -95,7 +81,7 @@ input {
   height: 34px;
 }
 
-input[type=checkbox] {
+.switch input[type=checkbox] {
   opacity: 0;
   width: 0;
   height: 0;
@@ -123,15 +109,15 @@ input[type=checkbox] {
   transition: .4s;
 }
 
-input[type=checkbox]:checked + .slider {
+.switch input[type=checkbox]:checked + .slider {
   background-color: #2196F3;
 }
 
-input[type=checkbox]:focus + .slider {
+.switch input[type=checkbox]:focus + .slider {
   box-shadow: 0 0 1px #2196F3;
 }
 
-input[type=checkbox]:checked + .slider:before {
+.switch input[type=checkbox]:checked + .slider:before {
   transform: translateX(26px);
 }
 
