--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   align-items: center;
   align-content: center;
   flex-direction: column;
+  font-family: sans-serif;
   /*flex-wrap: wrap;*/
 }
 
@@ -44,6 +45,43 @@
   }
 }
 
+.button {
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.add-button {
+  background-color: white;
+  color: black;
+  border: 2px solid #4CAF50;
+}
+
+.add-button:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.delete-button {
+  background-color: white;
+  color: black;
+  border: 2px solid #dc3545;
+}
+
+.delete-button:hover {
+  background-color: #dc3545;
+  color: white;
+}
+
+
 .user-list{
   display: flex;
 }
@@ -64,14 +102,35 @@
   max-width: 360px;
 }
 
-input {
-  margin: 10px;
-}
-
-
 /*Switch Between Users & Posts*/
 .container {
   display: flex;
+}
+
+.color-picker {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+input[type="color"] {
+  margin: 1rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border-radius: 15px;
+  cursor: pointer;
+}
+input[type="color"]::-webkit-color-swatch {
+  border-radius: 15px;
+  border: none;
+}
+input[type="color"]::-moz-color-swatch {
+  border-radius: 15px;
+  border: none;
 }
 
 .switch {
